--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.4.2",
     "dotenv": "^17.2.3",
+    "ejs": "^3.1.10",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "qrcode-terminal": "^0.12.0",
+    "sharp": "^0.34.4",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.6",
     "whatsapp-web.js": "^1.23.0"
