--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "ejs": "^3.1.10",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
+    "qrcode": "^1.5.4",
     "qrcode-terminal": "^0.12.0",
     "sharp": "^0.34.4",
     "sqlite": "^5.1.1",
